feat: Implement caching for X.509 certificates using Caffeine, including error handling and cache eviction logic
Signed-off-by: Awambeng Rodrick <awambengrodrick@gmail.com>