@@ -9,17 +9,19 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.math.BigInteger;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.cert.X509Certificate;
 import java.security.spec.ECGenParameterSpec;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.bouncycastle.asn1.ASN1OctetString;
 import org.bouncycastle.asn1.ASN1Sequence;
@@ -195,10 +197,8 @@ class ExtendedBCCertificateUtilsProviderTest {
         String subject = "cache-test";
         List<String> sans = List.of("cache.com");
 
-        X509Certificate cert1 =
-                provider.generateV3Certificate(caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), subject, sans);
-        X509Certificate cert2 =
-                provider.generateV3Certificate(caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), subject, sans);
+        X509Certificate cert1 = generateCert(subject, sans);
+        X509Certificate cert2 = generateCert(subject, sans);
 
         assertNotNull(cert1);
         assertNotNull(cert2);
@@ -208,12 +208,9 @@ class ExtendedBCCertificateUtilsProviderTest {
 
     @Test
     void testGenerateV3Certificate_cacheMissOnDifferentParams() {
-        X509Certificate cert1 = provider.generateV3Certificate(
-                caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), "s1", List.of("a.com"));
-        X509Certificate cert2 = provider.generateV3Certificate(
-                caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), "s2", List.of("a.com"));
-        X509Certificate cert3 = provider.generateV3Certificate(
-                caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), "s1", List.of("b.com"));
+        X509Certificate cert1 = generateCert("s1", List.of("a.com"));
+        X509Certificate cert2 = generateCert("s2", List.of("a.com"));
+        X509Certificate cert3 = generateCert("s1", List.of("b.com"));
 
         // Different subjects or SANs should yield different instances
         assertNotSame(cert1, cert2, "Different subjects should result in different certificates");
@@ -227,9 +224,8 @@ class ExtendedBCCertificateUtilsProviderTest {
 
         String subject = "rotation-test";
 
-        X509Certificate cert1 = provider.generateV3Certificate(
-                caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), subject, List.of());
-        X509Certificate cert2 = provider.generateV3Certificate(
+        X509Certificate cert1 = generateCert(subject);
+        X509Certificate cert2 = ExtendedCertificateUtils.generateV3Certificate(
                 caKeyPair2.getPrivate(), caCert2, subKeyPair.getPublic(), subject, List.of());
 
         // Cache should miss when CA changes
@@ -240,20 +236,43 @@ class ExtendedBCCertificateUtilsProviderTest {
     void testGenerateV3Certificate_concurrency() throws Exception {
         String subject = "concurrency-test";
         int threadCount = 10;
-        List<CompletableFuture<X509Certificate>> futures = new ArrayList<>();
-
-        for (int i = 0; i < threadCount; i++) {
-            futures.add(CompletableFuture.supplyAsync(() -> provider.generateV3Certificate(
-                    caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), subject, List.of())));
-        }
+        List<CompletableFuture<X509Certificate>> futures = Stream.generate(
+                        () -> CompletableFuture.supplyAsync(() -> generateCert(subject)))
+                .limit(threadCount)
+                .toList();
 
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
 
-        X509Certificate firstCert = futures.get(0).get();
-        for (int i = 1; i < threadCount; i++) {
-            // All threads should get the exact same instance
-            assertSame(firstCert, futures.get(i).get(), "All threads should receive the same cached instance");
-        }
+        X509Certificate firstCert = futures.getFirst().join();
+        futures.stream()
+                .skip(1)
+                .forEach(f -> assertSame(firstCert, f.join(), "All threads should receive the same cached instance"));
+    }
+
+    @Test
+    void testCreateCacheKey_HashException() throws Exception {
+        X509Certificate brokenCert = mock(X509Certificate.class);
+        when(brokenCert.getEncoded()).thenThrow(new java.security.cert.CertificateEncodingException("broken"));
+
+        assertThrows(
+                HashException.class,
+                () -> ExtendedCertificateUtils.generateV3Certificate(
+                        caKeyPair.getPrivate(), brokenCert, subKeyPair.getPublic(), "subject", List.of()));
+    }
+
+    @Test
+    void testGenerateV3Certificate_cacheEviction() {
+        // We know MAX_CACHE_SIZE is 100.
+        // 1. Fill the cache
+        X509Certificate firstCert = generateCert("subject-0");
+
+        IntStream.rangeClosed(1, 100).forEach(i -> generateCert("subject-" + i));
+
+        // 2. The first entry should be evicted
+        ExtendedCertificateUtils.cleanUpCache();
+        X509Certificate refilledFirstCert = generateCert("subject-0");
+
+        assertNotSame(firstCert, refilledFirstCert, "Entry should have been evicted from the size-limited cache");
     }
 
     @Test
@@ -316,6 +335,15 @@ class ExtendedBCCertificateUtilsProviderTest {
         KeyPairGenerator gen = KeyPairGenerator.getInstance(KeyType.EC);
         gen.initialize(new ECGenParameterSpec(curveName));
         return gen.generateKeyPair();
+    }
+
+    private X509Certificate generateCert(String subject) {
+        return generateCert(subject, List.of());
+    }
+
+    private X509Certificate generateCert(String subject, List<String> sans) {
+        return ExtendedCertificateUtils.generateV3Certificate(
+                caKeyPair.getPrivate(), caCert, subKeyPair.getPublic(), subject, sans);
     }
 
     public static class ECCurves {
